package fiap.com.example.challenge.model;

public enum EmployeeFunction {
    AMS_LEVEL,
    SERVICE_DESK
}
